<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_appearance">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="ui.theme"
            android:title="@string/pref_app_theme" />

        <ListPreference
            android:defaultValue="@string/pref_theme_choice_light_value"
            android:entries="@array/pref_theme_choices_names"
            android:entryValues="@array/pref_theme_choices_values"
            android:key="@string/pref_theme"
            android:persistent="true"
            android:title="@string/pref_theme_title" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:defaultValue="@string/text_size_medium_value"
            android:entries="@array/text_sizes"
            android:entryValues="@array/text_size_values"
            android:key="@string/pref_text_size"
            android:persistent="true"
            android:title="@string/pref_text_size_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_expanded_by_default"
            android:persistent="true"
            android:summary="@string/pref_expanded_by_default_summary"
            android:title="@string/pref_expanded_by_default_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_show_timestamp"
            android:persistent="true"
            android:summary="@string/pref_show_timestamp_summary"
            android:title="@string/pref_show_timestamp_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_configuration">

        <!-- TODO: Switch to MultiSelectListPreference-->
        <com.pluscubed.logcat.widget.MultipleChoicePreference
            android:defaultValue="@string/pref_buffer_choice_main_value"
            android:entries="@array/pref_buffer_choices"
            android:entryValues="@array/pref_buffer_choice_values"
            android:key="@string/pref_buffer"
            android:persistent="true"
            android:title="@string/pref_buffer_title" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:defaultValue="@string/log_level_value_verbose"
            android:entries="@array/log_levels"
            android:entryValues="@array/log_levels_values"
            android:key="@string/pref_default_log_level"
            android:persistent="true"
            android:title="@string/pref_default_log_level_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_advanced">

        <com.pluscubed.logcat.widget.NonnegativeIntegerEditTextPreference
            android:defaultValue="@string/pref_log_line_period_default"
            android:key="@string/pref_log_line_period"
            android:persistent="true"
            android:summary="@string/pref_log_line_period_summary"
            android:title="@string/pref_log_line_period_title" />

        <com.pluscubed.logcat.widget.NonnegativeIntegerEditTextPreference
            android:defaultValue="@string/pref_display_limit_default"
            android:key="@string/pref_display_limit"
            android:persistent="true"
            android:summary="@string/pref_display_limit_summary"
            android:title="@string/pref_display_limit_title" />

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue="@string/pref_filter_pattern_default"
            android:key="@string/pref_filter_pattern"
            android:persistent="true"
            android:summary="@string/pref_filter_pattern_summary"
            android:title="@string/pref_filter_pattern_title" />

        <SwitchPreference
            android:key="scrubber"
            android:title="@string/scrubber"
            android:summary="@string/scrubber_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="@string/pref_about"
            android:title="@string/about_matlog" />

    </PreferenceCategory>

</PreferenceScreen>
