<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/abc_searchview_description_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_play_pause"
        android:icon="@drawable/ic_pause_white_24dp"
        android:title="Pause/Unpause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_expand_all"
        android:icon="@drawable/ic_expand_more_white_24dp"
        android:title="Expand All"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"
        android:title="Clear"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_log_level"
        android:alphabeticShortcut="@string/log_level"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/log_level" />

    <item
        android:id="@+id/menu_main_log"
        android:alphabeticShortcut="@string/play_x1_log"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/play_x1_log" />

    <item
        android:id="@+id/menu_save_log"
        android:alphabeticShortcut="@string/save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save" />

    <item
        android:id="@+id/menu_open_log"
        android:alphabeticShortcut="@string/open"
        android:icon="@drawable/ic_folder_white_24dp"
        android:title="@string/open" />

    <item
        android:id="@+id/menu_send_log"
        android:alphabeticShortcut="@string/send_log"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/send_log" />


    <item
        android:id="@+id/menu_record_log"
        android:alphabeticShortcut="@string/start_recording_log"
        android:icon="@drawable/ic_menu_record"
        android:title="@string/start_recording_log" />

    <item
        android:id="@+id/menu_stop_recording_log"
        android:alphabeticShortcut="@string/stop_recording_log"
        android:icon="@drawable/ic_stop_white_24dp"
        android:title="@string/stop_recording_log" />

    <item
        android:id="@+id/menu_save_as_log"
        android:alphabeticShortcut="@string/save_as"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save_as" />

    <item
        android:id="@+id/menu_delete_saved_log"
        android:alphabeticShortcut="@string/manage_saved_logs"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/manage_saved_logs" />

    <item
        android:id="@+id/menu_partial_select"
        android:alphabeticShortcut="@string/menu_title_partial_select"
        android:icon="@drawable/ic_view_agenda_white_24dp"
        android:title="@string/menu_title_partial_select" />

    <item
        android:id="@+id/menu_filters"
        android:alphabeticShortcut="@string/title_filters"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/title_filters" />

    <item
        android:id="@+id/menu_settings"
        android:alphabeticShortcut="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_crazy_logger_service"
        android:alphabeticShortcut="Crazy Logger"
        android:title="Crazy Logger" />

</menu>